@@ -60,10 +60,9 @@ namespace MonoDevelop.Xml.StateEngine
 			if (ct == null) {
 				Debug.Assert (context.CurrentStateLength == 1,
 					"IncompleteNode must not be an XClosingTag when CurrentStateLength is 1");
-				Debug.Assert (c == '/', "First character pushed to a XmlClosingTagState must be '/'");
 				Debug.Assert (context.Nodes.Peek () is XElement);
 				
-				ct = new XClosingTag (context.Position - 1);
+				ct = new XClosingTag (context.Position - 3); //3 = </ and the current char
 				context.Nodes.Push (ct);
 			}
 			
